<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/colored_rectangle">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >

    <TextView
        android:id="@+id/order_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_no" />

    <TextView
        android:id="@+id/order_due_date"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/customer_phone"
        android:text="@string/order_due_date" />

    <TextView
        android:id="@+id/customer_name"
        android:layout_below="@+id/order_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_name" />

    <TextView
        android:id="@+id/customer_address"
        android:layout_below="@+id/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_address" />

    <TextView
        android:id="@+id/customer_phone"
        android:layout_below="@+id/customer_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_phone" />


    <TextView
        android:id="@+id/order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/customer_phone"
        android:text="@string/Order_total" />
</RelativeLayout>
</LinearLayout>